bpo-39847: don't over-wait for mutex on win32 at tickcount overflow

The 32-bit (49-day) TickCount relied on in EnterNonRecursiveMutex can overflow in the gap between the 'target' time and the 'now' time WaitForSingleObjectEx returns, causing the loop to think it needs to wait another 49 days. This is most likely to happen when the machine is hibernated during WaitForSingleObjectEx.

This makes acquiring a lock/event/etc from the _thread or threading module appear to never timeout.

Replace with GetTickCount64 - this is OK now we no longer support XP which lacks it, and is in use for time.monotonic.

Approaches not taken:

- forcing signed arithmetic for the now/target comparison (this would only partially solve the problem with GetTickCount as you could still break it by hibernating for 24 days; it's unnecessary for 64-bit which takes however many hundred million years to roll over)